--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "docattorney",
+  "homepage": "https://johanvaneck.github.io/docattorney",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -10,9 +11,11 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
