--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docattorney",
-  "homepage": "https://johanvaneck.github.io/docattorney/",
+  "homepage": "https://johanvaneck.github.io/docattorney",
   "version": "0.0.0",
   "private": false,
   "type": "module",
