--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.4",
     "gh-pages": "^6.1.1",
+    "primevue": "^4.0.4",
+    "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
