--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@primevue/themes": "^4.0.4",
     "gh-pages": "^6.1.1",
+    "jspdf": "^2.5.1",
     "primevue": "^4.0.4",
     "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.4.29",
